@@ -3,27 +3,18 @@ package no.ssb.kostra.control.regnskap.kostra;
 import no.ssb.kostra.control.*;
 import no.ssb.kostra.control.felles.*;
 import no.ssb.kostra.control.regnskap.FieldDefinitions;
+import no.ssb.kostra.control.regnskap.felles.ControlIntegritet;
 import no.ssb.kostra.controlprogram.Arguments;
 import no.ssb.kostra.utils.Between;
-import no.ssb.kostra.utils.Format;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
-import java.util.Map;
-import java.util.function.Function;
-import java.util.stream.Collectors;
+import java.util.Objects;
 
 public class Main {
-    private static String createLinenumber(Integer l, int line, String record) {
-        return "Linje " + Format.sprintf("%0" + l + "d", line) + " : <pre>" + record + "</pre>";
-    }
-
     public static ErrorReport doControls(Arguments args) {
         ErrorReport er = new ErrorReport(args);
-        List<String> list1 = args.getInputContentAsStringList().stream()
-                .filter(l -> l.trim().length() != 0)
-                .collect(Collectors.toList());
+        List<String> list1 = args.getInputContentAsStringList();
 
         // alle records må være med korrekt lengde, ellers vil de andre kontrollene kunne feile
         // Kontroll Recordlengde
@@ -33,7 +24,8 @@ public class Main {
             return er;
         }
 
-        List<FieldDefinition> fieldDefinitions = FieldDefinitions.getFieldDefinitions();
+        List<FieldDefinition> fieldDefinitions = Utils.mergeFieldDefinitionsAndArguments(FieldDefinitions.getFieldDefinitions(), args);
+        List<Record> regnskap = Utils.getValidRecords(list1, fieldDefinitions);
         List<String> bevilgningRegnskapList = List.of("0A", "0C", "0I", "0K", "0M", "0P");
         List<String> regionaleBevilgningRegnskapList = List.of("0A", "0C", "0M", "0P");
         List<String> balanseRegnskapList = List.of("0B", "0D", "0J", "0L", "0N", "0Q");
@@ -43,276 +35,122 @@ public class Main {
                 "030111", "030112", "030113", "030114", "030115"
         );
         List<String> svalbard = List.of("211100");
-        List<Record> regnskap = list1.stream()
-                .map(p -> new Record(p, fieldDefinitions))
-                .filter(p -> {
-                    try {
-                        return p.getFieldAsInteger("belop") != 0;
-                    } catch (NullPointerException e){
-                        return true;
-                    }
-                })
-                .collect(Collectors.toList());
         String saksbehandler = "Filuttrekk";
         Integer n = regnskap.size();
-        Integer l = String.valueOf(n).length();
+        int l = String.valueOf(n).length();
 
         // filbeskrivelsesskontroller
         ControlFilbeskrivelse.doControl(regnskap, er);
 
-        if (er.getErrorType() == Constants.CRITICAL_ERROR) {
-            return er;
-        }
-
-
         // integritetskontroller
-        regnskap.forEach(p -> {
-
-            ControlFelt1InneholderKodeFraKodeliste.doControl(
-                    p
-                    , er
-                    , new ErrorReportEntry(saksbehandler, createLinenumber(l, p.getLine(), p.getRecord()), " ", " "
-                            , "Kontroll Regnskapstype"
-                            , "Korrigér regnskapstype. Fant '" + p.getFieldAsString("skjema") + "', forventet '" + args.getSkjema() + "'"
-                            , Constants.CRITICAL_ERROR
-                    )
-                    , "skjema"
-                    , Collections.singletonList(args.getSkjema())
-            );
-
-            ControlFelt1InneholderKodeFraKodeliste.doControl(
-                    p
-                    , er
-                    , new ErrorReportEntry(saksbehandler, createLinenumber(l, p.getLine(), p.getRecord()), " ", " "
-                            , "Kontroll Årgang"
-                            , "Korrigér årgang. Fant  '" + p.getFieldAsString("aargang") + "', forventet '" + args.getAargang() + "'"
-                            , Constants.CRITICAL_ERROR
-                    )
-                    , "aargang"
-                    , Collections.singletonList(args.getAargang())
-            );
-
-            ControlFelt1InneholderKodeFraKodeliste.doControl(
-                    p
-                    , er
-                    , new ErrorReportEntry(saksbehandler, createLinenumber(l, p.getLine(), p.getRecord()), " ", " "
-                            , "Kontroll Kvartal"
-                            , "Korrigér kvartal. Fant  '" + p.getFieldAsString("kvartal") + "', forventet '" + args.getKvartal() + "'"
-                            , Constants.CRITICAL_ERROR
-                    )
-                    , "kvartal"
-                    , Collections.singletonList(args.getKvartal())
-            );
-
-            ControlFelt1InneholderKodeFraKodeliste.doControl(
-                    p
-                    , er
-                    , new ErrorReportEntry(saksbehandler, createLinenumber(l, p.getLine(), p.getRecord()), " ", " "
-                            , "Kontroll fylkeskommune-/kommune-/bydelsnummer."
-                            , "Korrigér fylkeskommune-/kommune-/bydelsnummer. Fant  '" + p.getFieldAsString("region") + "', forventet '" + args.getRegion() + "'"
-                            , Constants.CRITICAL_ERROR
-                    )
-                    , "region"
-                    , Collections.singletonList(args.getRegion())
-            );
-
-//            if (Arrays.asList("0I", "0J", "0K", "0L").contains(args.getSkjema())) {
-                ControlFelt1InneholderKodeFraKodeliste.doControl(
-                        p
-                        , er
-                        , new ErrorReportEntry(saksbehandler, createLinenumber(l, p.getLine(), p.getRecord()), " ", " "
-                                , "Kontroll Organisasjonsnummer."
-                                , "Korrigér organisasjonsnummer. Fant  '" + p.getFieldAsString("orgnr") + "', forventet '" + args.getOrgnr() + "'"
-                                , Constants.CRITICAL_ERROR
-                        )
-                        , "orgnr"
-                        , Collections.singletonList(args.getOrgnr())
-                );
-//            } else {
-//                ControlFelt1InneholderKodeFraKodeliste.doControl(
-//                        p
-//                        , er
-//                        , new ErrorReportEntry(saksbehandler, createLinenumber(l, p.getLine(), p.getRecord()), " ", " "
-//                                , "Kontroll Organisasjonsnummer."
-//                                , "Korreksjon: Rett organisasjonsnummeret. Fant  '" + p.getFieldAsString("orgnr") + "', forventet '" + args.getOrgnr() + "'"
-//                                , Constants.CRITICAL_ERROR
-//                        )
-//                        , "orgnr"
-//                        , Collections.singletonList("         ")
-//                );
-//            }
-
-            ControlFelt1InneholderKodeFraKodeliste.doControl(
-                    p
-                    , er
-                    , new ErrorReportEntry(saksbehandler, createLinenumber(l, p.getLine(), p.getRecord()), " ", " "
-                            , "Kontroll Foretaksnummer."
-                            , "Korrigér foretaksnummer. Fant '" + p.getFieldAsString("foretaksnr") + "', forventet '" + args.getForetaknr() + "'"
-                            , Constants.CRITICAL_ERROR
-                    )
-                    , "foretaksnr"
-                    , Collections.singletonList(args.getForetaknr())
-            );
-
-            ControlFelt1InneholderKodeFraKodeliste.doControl(
-                    p
-                    , er
-                    , new ErrorReportEntry(saksbehandler, createLinenumber(l, p.getLine(), p.getRecord()), " ", " "
-                            , "Kontroll Kontoklasse."
-                            , "Korreksjon: Rett kontoklassen. Fant '" + p.getFieldAsString("kontoklasse") + "', forventet én av :  "
-                            + Definitions.getKontoklasseAsList(args.getSkjema())
-                            .stream().map(String::trim).map(s -> "'".concat(s).concat("'")).collect(Collectors.joining(", "))
-                            , Constants.CRITICAL_ERROR
-                    )
-                    , "kontoklasse"
-                    , Definitions.getKontoklasseAsList(args.getSkjema())
-            );
-
-            if (bevilgningRegnskapList.contains(args.getSkjema())) {
-                ControlFelt1InneholderKodeFraKodeliste.doControl(
-                        p
-                        , er
-                        , new ErrorReportEntry(saksbehandler, createLinenumber(l, p.getLine(), p.getRecord()), " ", " "
-                                , "Kontroll Funksjon."
-                                , "Korrigér funksjon. Fant '" + p.getFieldAsTrimmedString("funksjon_kapittel") + "', forventet én av :  "
-                                + Definitions.getFunksjonKapittelAsList(args.getSkjema(), p.getFieldAsString("region"))
-                                .stream().map(String::trim).map(s -> "'".concat(s).concat("'")).collect(Collectors.joining(", "))
-                                , Constants.CRITICAL_ERROR
-                        )
-                        , "funksjon_kapittel"
-                        , Definitions.getFunksjonKapittelAsList(args.getSkjema(), p.getFieldAsString("region"))
-                );
-
-                ControlFelt1InneholderKodeFraKodeliste.doControl(
-                        p
-                        , er
-                        , new ErrorReportEntry(saksbehandler, createLinenumber(l, p.getLine(), p.getRecord()), " ", " "
-                                , "Kontroll Art."
-                                , "Korrigér art. Fant '" + p.getFieldAsString("art_sektor") + "', forventet én av : "
-                                + Definitions.getArtSektorAsList(args.getSkjema(), p.getFieldAsString("region"))
-                                .stream().map(String::trim).map(s -> "'".concat(s).concat("'")).collect(Collectors.joining(", "))
-                                , Constants.CRITICAL_ERROR
-                        )
-                        , "art_sektor"
-                        , Definitions.getArtSektorAsList(args.getSkjema(), p.getFieldAsString("region"))
-                );
-            }
-
-            if (balanseRegnskapList.contains(args.getSkjema())) {
-                ControlFelt1InneholderKodeFraKodeliste.doControl(
-                        p
-                        , er
-                        , new ErrorReportEntry(saksbehandler, createLinenumber(l, p.getLine(), p.getRecord()), " ", " "
-                                , "Kontroll kapittel."
-                                , "Korrigér kapittel. Fant '" + p.getFieldAsTrimmedString("funksjon_kapittel") + "', forventet én av : "
-                                + Definitions.getFunksjonKapittelAsList(args.getSkjema(), p.getFieldAsString("region"))
-                                .stream().map(String::trim).map(s -> "'".concat(s).concat("'")).collect(Collectors.joining(", "))
-                                , Constants.CRITICAL_ERROR
-                        )
-                        , "funksjon_kapittel"
-                        , Definitions.getFunksjonKapittelAsList(args.getSkjema(), p.getFieldAsString("region"))
-                );
-
-                ControlFelt1InneholderKodeFraKodeliste.doControl(
-                        p
-                        , er
-                        , new ErrorReportEntry(saksbehandler, createLinenumber(l, p.getLine(), p.getRecord()), " ", " "
-                                , "Kontroll sektor."
-                                , "Korrigér sektor. Fant '" + p.getFieldAsString("art_sektor") + "', forventet én av : "
-                                + Definitions.getArtSektorAsList(args.getSkjema(), p.getFieldAsString("region"))
-                                .stream().map(String::trim).map(s -> "'".concat(s).concat("'")).collect(Collectors.joining(", "))
-                                , Constants.CRITICAL_ERROR
-                        )
-                        , "art_sektor"
-                        , Definitions.getArtSektorAsList(args.getSkjema(), p.getFieldAsString("region"))
-                );
-            }
-
-            ControlHeltall.doControl(
-                    p
-                    , er
-                    , new ErrorReportEntry(saksbehandler, createLinenumber(l, p.getLine(), p.getRecord()), " ", " "
-                            , "Kontroll beløp."
-                            , "Korreksjon: Rett opp feil beløp(" + p.getFieldAsString("belop") + ")"
-                            , Constants.CRITICAL_ERROR
-                    )
-                    , "belop"
-            );
-        });
+        ControlIntegritet.doControl(regnskap, er, l, args, bevilgningRegnskapList, balanseRegnskapList
+                , Definitions.getKontoklasseAsList(args.getSkjema())
+                , Definitions.getFunksjonKapittelAsList(args.getSkjema(), args.getRegion())
+                , Definitions.getArtSektorAsList(args.getSkjema(), args.getRegion())
+        );
 
 
         // Kombinasjonskontroller, per record
         regnskap.forEach(p -> {
-            if (bevilgningRegnskapList.contains(args.getSkjema())) {
-                ControlFelt1InneholderKodeFraKodelisteSaaFelt2InneholderKodeFraKodeliste.doControl(
-                        p
-                        , er
-                        , new ErrorReportEntry(saksbehandler, createLinenumber(l, p.getLine(), p.getRecord()), " ", " "
-                                , "Kontroll Kombinasjon kontoklasse og art i investeringsregnskapet"
-                                , "Rett opp kontoklasse eller art"
-                                , Constants.CRITICAL_ERROR
-                        )
-                        , "art_sektor"
-                        , List.of("512", "521", "522", "529", "670", "910", "911", "912", "921", "922", "929", "970")
-                        , "kontoklasse"
-                        , List.of(Definitions.getKontoklasseAsMap(args.getSkjema()).get("I")));
-
-                ControlFelt1InneholderKodeFraKodelisteSaaFelt2InneholderKodeFraKodeliste.doControl(
-                        p
-                        , er
-                        , new ErrorReportEntry(saksbehandler, createLinenumber(l, p.getLine(), p.getRecord()), " ", " "
-                                , "Kontroll Kombinasjon kontoklasse og art i driftsregnskapet"
-                                , "Rett opp kontoklasse eller art"
-                                , Constants.CRITICAL_ERROR
-                        )
-                        , "art_sektor"
-                        , List.of("240", "509", "540", "570", "590", "600", "629", "640", "800", "870", "874", "875", "877", "909", "990")
-                        , "kontoklasse"
-                        , List.of(Definitions.getKontoklasseAsMap(args.getSkjema()).get("D")));
-
-                ControlFelt1InneholderKodeFraKodelisteSaaFelt2InneholderKodeFraKodeliste.doControl(
-                        p
-                        , er
-                        , new ErrorReportEntry(saksbehandler, createLinenumber(l, p.getLine(), p.getRecord()), " ", " "
-                                , "Kontroll Kombinasjon kontoklasse og funksjon i investeringsregnskapet"
-                                , "Rett opp til funksjon som er gyldig i driftsregnskapet, eller overfør posteringen til investeringsregnskapet. "
-                                + "I driftsregnskapet skal mva-kompensasjon (art 729) føres på funksjonen hvor utgiften oppstod."
-                                , Constants.CRITICAL_ERROR
-                        )
-                        , "funksjon_kapittel"
-                        , List.of("841 ")
-                        , "kontoklasse"
-                        , List.of(Definitions.getKontoklasseAsMap(args.getSkjema()).get("I")));
-
-                ControlFelt1InneholderKodeFraKodelisteSaaFelt2InneholderKodeFraKodeliste.doControl(
-                        p
-                        , er
-                        , new ErrorReportEntry(saksbehandler, createLinenumber(l, p.getLine(), p.getRecord()), " ", " "
-                                , "Kontroll Kombinasjon kontoklasse og funksjon i driftsregnskapet"
-                                , "Rett opp til funksjon som er gyldig i investeringsregnskapet, eller overfør posteringen til driftsregnskapet."
-                                , Constants.CRITICAL_ERROR
-                        )
-                        , "funksjon_kapittel"
-                        , List.of("800 ", "840 ", "860 ")
-                        , "kontoklasse"
-                        , List.of(Definitions.getKontoklasseAsMap(args.getSkjema()).get("D")));
-
-                if (p.getFieldAsString("kontoklasse").equalsIgnoreCase(Definitions.getKontoklasseAsMap(args.getSkjema()).get("I"))) {
-                    ControlFelt1InneholderKodeFraKodelisteSaaFelt2InneholderKodeFraKodeliste.doControl(
+            // Kontroller for records i bevilgningsregnskapet
+            if (Comparator.isCodeInCodelist(args.getSkjema(), bevilgningRegnskapList)) {
+                if (p.getFieldAsString("kontoklasse").equalsIgnoreCase(Definitions.getKontoklasseAsMap(args.getSkjema()).get("D"))) {
+                    // driftsregnskapet
+                    List<String> gyldigeDriftFunksjoner = Definitions.getSpesifikkeFunksjoner(args.getSkjema(), args.getRegion(), p.getFieldAsString("kontoklasse"));
+                    ControlFelt1InneholderKodeFraKodeliste.doControl(
                             p
                             , er
-                            , new ErrorReportEntry(saksbehandler, createLinenumber(l, p.getLine(), p.getRecord()), " ", " "
-                                    , "Kontroll Kombinasjon kontoklasse, funksjon og art i investeringsregnskapet"
-                                    , "Rett opp til riktig kombinasjon av kontoklasse, funksjon og art. "
-                                    + "Art 729 er kun gyldig i kombinasjon funksjon 841 i investeringsregnskapet. "
-                                    + "Mva-kompensasjonen for anskaffelser i investeringsregnskapet er frie midler som skal "
-                                    + "benyttes til felles finansiering av investeringer i bygninger, anlegg og andre varige driftsmidler."
+                            , new ErrorReportEntry(saksbehandler, Utils.createLinenumber(l, p), " ", " "
+                                    , "Kontroll Kombinasjon i driftsregnskapet, kontoklasse og funksjon"
+                                    , "Korrigér ugyldig funksjon (" + p.getFieldAsTrimmedString("funksjon_kapittel") + ") til en gyldig funksjon i driftsregnskapet, én av ("
+                                    + gyldigeDriftFunksjoner
+                                    + "), eller overfør posteringen til investeringsregnskapet."
+                                    , Constants.CRITICAL_ERROR
+                            )
+                            , "funksjon_kapittel"
+                            , gyldigeDriftFunksjoner);
+
+                    List<String> gyldigeDriftArter = Definitions.getSpesifikkeArter(args.getSkjema(), args.getRegion(), p.getFieldAsString("kontoklasse"));
+                    ControlFelt1InneholderKodeFraKodeliste.doControl(
+                            p
+                            , er
+                            , new ErrorReportEntry(saksbehandler, Utils.createLinenumber(l, p), " ", " "
+                                    , "Kontroll Kombinasjon i driftsregnskapet, kontoklasse og art"
+                                    , "Korrigér ugyldig art (" + p.getFieldAsTrimmedString("art_sektor") + ") til en gyldig art i driftsregnskapet, én av ("
+                                    + gyldigeDriftArter
+                                    + "), eller overfør posteringen til investeringsregnskapet."
                                     , Constants.CRITICAL_ERROR
                             )
                             , "art_sektor"
-                            , List.of("729")
+                            , gyldigeDriftArter);
+
+                    if (Arrays.asList("0A", "0M").contains(args.getSkjema())) {
+                        ControlFelt1InneholderKodeFraKodelisteSaaFelt2InneholderKodeFraKodeliste.doControl(
+                                p
+                                , er
+                                , new ErrorReportEntry(saksbehandler, Utils.createLinenumber(l, p), " ", " "
+                                        , "Kontroll Kombinasjon i driftsregnskapet kontoklasse, funksjon og art"
+                                        , "Korrigér til riktig kombinasjon av kontoklasse, funksjon og art. "
+                                        + "I driftsregnskapet, kontoklasse " + p.getFieldAsString("kontoklasse") + ", er artene 874 og 875 kun tillat brukt i kombinasjon med funksjon 800"
+                                        , Constants.CRITICAL_ERROR
+                                )
+                                , "art_sektor"
+                                , List.of("874", "875")
+                                , "funksjon_kapittel"
+                                , List.of("800 "));
+                    }
+
+                } else if (p.getFieldAsString("kontoklasse").equalsIgnoreCase(Definitions.getKontoklasseAsMap(args.getSkjema()).get("I"))) {
+                    // investeringsregnskapet
+                    List<String> gyldigeInvesteringFunksjoner = Definitions.getSpesifikkeFunksjoner(args.getSkjema(), args.getRegion(), p.getFieldAsString("kontoklasse"));
+                    ControlFelt1InneholderKodeFraKodelisteSaaFelt2InneholderKodeFraKodeliste.doControl(
+                            p
+                            , er
+                            , new ErrorReportEntry(saksbehandler, Utils.createLinenumber(l, p), " ", " "
+                                    , "Kontroll Kombinasjon i investeringsregnskapet, kontoklasse og funksjon"
+                                    , "Korrigér ugyldig funksjon (" + p.getFieldAsTrimmedString("funksjon_kapittel") + ") til en gyldig funksjon i investeringsregnskapet, én av ("
+                                    + gyldigeInvesteringFunksjoner
+                                    + "), eller overfør posteringen til driftsregnskapet. "
+                                    + "I driftsregnskapet skal mva-kompensasjon (art 729) føres på funksjonen hvor utgiften oppstod."
+                                    , Constants.CRITICAL_ERROR
+                            )
                             , "funksjon_kapittel"
-                            , List.of("841 "));
+                            , gyldigeInvesteringFunksjoner
+                            , "kontoklasse"
+                            , List.of(Definitions.getKontoklasseAsMap(args.getSkjema()).get("I")));
+
+                    List<String> gyldigeInvesteringArter = Definitions.getSpesifikkeArter(args.getSkjema(), args.getRegion(), p.getFieldAsString("kontoklasse"));
+                    ControlFelt1InneholderKodeFraKodeliste.doControl(
+                            p
+                            , er
+                            , new ErrorReportEntry(saksbehandler, Utils.createLinenumber(l, p), " ", " "
+                                    , "Kontroll Kombinasjon i investeringsregnskapet, kontoklasse og art"
+                                    , "Korrigér ugyldig art (" + p.getFieldAsTrimmedString("art_sektor") + ") til en gyldig art i investeringsregnskapet, én av ("
+                                    + gyldigeInvesteringArter
+                                    + "), eller overfør posteringen til driftsregnskapet."
+                                    , Constants.CRITICAL_ERROR
+                            )
+                            , "art_sektor"
+                            , gyldigeInvesteringArter);
+
+
+                    if (p.getFieldAsString("kontoklasse").equalsIgnoreCase(Definitions.getKontoklasseAsMap(args.getSkjema()).get("I"))) {
+                        ControlFelt1InneholderKodeFraKodelisteSaaFelt2InneholderKodeFraKodeliste.doControl(
+                                p
+                                , er
+                                , new ErrorReportEntry(saksbehandler, Utils.createLinenumber(l, p), " ", " "
+                                        , "Kontroll Kombinasjon i investeringsregnskapet, kontoklasse, funksjon og art"
+                                        , "Korrigér til riktig kombinasjon av kontoklasse, funksjon og art. "
+                                        + "Art 729 er kun gyldig i kombinasjon funksjon 841 i investeringsregnskapet. "
+                                        + "Mva-kompensasjonen for anskaffelser i investeringsregnskapet er frie midler som skal "
+                                        + "benyttes til felles finansiering av investeringer i bygninger, anlegg og andre varige driftsmidler."
+                                        , Constants.CRITICAL_ERROR
+                                )
+                                , "art_sektor"
+                                , List.of("729")
+                                , "funksjon_kapittel"
+                                , List.of("841 "));
+                    }
                 }
 
                 // Artene 589, 980 og 989 er kun tillat brukt i kombinasjon med funksjon 899.
@@ -320,7 +158,7 @@ public class Main {
                 ControlFelt1InneholderKodeFraKodelisteSaaFelt2InneholderKodeFraKodeliste.doControl(
                         p
                         , er
-                        , new ErrorReportEntry(saksbehandler, createLinenumber(l, p.getLine(), p.getRecord()), " ", " "
+                        , new ErrorReportEntry(saksbehandler, Utils.createLinenumber(l, p), " ", " "
                                 , "Kontroll Kombinasjon funksjon og art"
                                 , "Artene 589, 980 og 989 er kun tillat brukt i kombinasjon med funksjon 899. "
                                 + "Og motsatt, funksjon 899 er kun tillat brukt i kombinasjon med artene 589, 980 og 989"
@@ -334,7 +172,7 @@ public class Main {
                 ControlFelt1InneholderKodeFraKodelisteSaaFelt2InneholderKodeFraKodeliste.doControl(
                         p
                         , er
-                        , new ErrorReportEntry(saksbehandler, createLinenumber(l, p.getLine(), p.getRecord()), " ", " "
+                        , new ErrorReportEntry(saksbehandler, Utils.createLinenumber(l, p), " ", " "
                                 , "Kontroll Kombinasjon funksjon og art"
                                 , "Artene 589, 980 og 989 er kun tillat brukt i kombinasjon med funksjon 899. "
                                 + "Og motsatt, funksjon 899 er kun tillat brukt i kombinasjon med artene 589, 980 og 989"
@@ -347,46 +185,10 @@ public class Main {
 
             }
 
-            if (Arrays.asList("0A", "0M").contains(args.getSkjema())) {
-                if (p.getFieldAsString("kontoklasse").equalsIgnoreCase(Definitions.getKontoklasseAsMap(args.getSkjema()).get("D"))) {
-                    ControlFelt1InneholderKodeFraKodelisteSaaFelt2InneholderKodeFraKodeliste.doControl(
-                            p
-                            , er
-                            , new ErrorReportEntry(saksbehandler, createLinenumber(l, p.getLine(), p.getRecord()), " ", " "
-                                    , "Kontroll Kombinasjon kontoklasse, funksjon og art i driftsregnskapet"
-                                    , "Rett opp til riktig kombinasjon av kontoklasse, funksjon og art."
-                                    , Constants.CRITICAL_ERROR
-                            )
-                            , "art_sektor"
-                            , List.of("874", "875")
-                            , "funksjon_kapittel"
-                            , List.of("800 "));
-                }
-            }
         });
 
         // Dublett kontroll
-        List<String> dubletter = regnskap.stream()
-                .map(p -> String.join(" * ", List.of(
-                        p.getFieldAsTrimmedString("kontoklasse"),
-                        p.getFieldAsTrimmedString("funksjon_kapittel"),
-                        p.getFieldAsTrimmedString("art_sektor"))))
-                .collect(Collectors.groupingBy(Function.identity(), Collectors.counting()))
-                .entrySet()
-                .stream()
-                .filter(p -> p.getValue() > 1)
-                .map(Map.Entry::getKey)
-                .sorted()
-                .collect(Collectors.toList());
-
-        if (!dubletter.isEmpty()) {
-            er.addEntry(
-                    new ErrorReportEntry(saksbehandler, "Dubletter", " ", " "
-                            , "Kontroll Dubletter"
-                            , "Dubletter summeres sammen. (Gjelder for:<br/>\n" + String.join(",<br/>\n", dubletter) + ")"
-                            , Constants.NORMAL_ERROR
-                    ));
-        }
+        ControlDubletter.doControl(regnskap, er, List.of("kontoklasse", "funksjon_kapittel", "art_sektor"));
 
 
         // SUMMERINGSKONTROLLER
@@ -395,13 +197,13 @@ public class Main {
         //Denne kontrollen gjelder IKKE for bydelene i Oslo
         //D = Driftsregnskap (kontoklasse 1 / 3)
         //I = Investeringsregnskap (kontoklasse 0 / 4)
-        if (bevilgningRegnskapList.contains(args.getSkjema())) {
+        if (Comparator.isCodeInCodelist(args.getSkjema(), bevilgningRegnskapList)) {
             if (!osloBydeler.contains(args.getRegion())) {
                 // 1) Investeringsregnskapet må ha utgiftsføringer, dvs. være høyere enn 0
                 int sumInvesteringsUtgifter = regnskap.stream()
                         .filter(p -> p.getFieldAsString("kontoklasse").equalsIgnoreCase(Definitions.getKontoklasseAsMap(args.getSkjema()).get("I"))
-                                && Between.betweenInclusive(p.getFieldAsInteger("art_sektor"), 10, 590))
-                        .map(p -> p.getFieldAsInteger("belop"))
+                                && Between.betweenInclusive(p.getFieldAsIntegerDefaultEquals0("art_sektor"), 10, 590))
+                        .map(p -> p.getFieldAsIntegerDefaultEquals0("belop"))
                         .reduce(0, Integer::sum);
 
                 if (regionaleBevilgningRegnskapList.contains(args.getSkjema())) {
@@ -409,7 +211,7 @@ public class Main {
                         er.addEntry(new ErrorReportEntry(
                                 saksbehandler, "Summeringskontroller", " ", " "
                                 , "Kontroll Summeringskontroller bevilgningsregnskap, utgiftsposteringer investeringsregnskapet"
-                                , "Rett opp slik at fila inneholder utgiftsposteringene (" + sumInvesteringsUtgifter + ") i investeringsregnskapet"
+                                , "Korrigér slik at fila inneholder utgiftsposteringene (" + sumInvesteringsUtgifter + ") i investeringsregnskapet"
                                 , Constants.CRITICAL_ERROR
                         ));
                     }
@@ -418,8 +220,8 @@ public class Main {
                 // 2) Investeringsregnskapet må ha inntekter, dvs. være mindre enn 0
                 int sumInvesteringsInntekter = regnskap.stream()
                         .filter(p -> p.getFieldAsString("kontoklasse").equalsIgnoreCase(Definitions.getKontoklasseAsMap(args.getSkjema()).get("I"))
-                                && Between.betweenInclusive(p.getFieldAsInteger("art_sektor"), 600, 990))
-                        .map(p -> p.getFieldAsInteger("belop"))
+                                && Between.betweenInclusive(p.getFieldAsIntegerDefaultEquals0("art_sektor"), 600, 990))
+                        .map(p -> p.getFieldAsIntegerDefaultEquals0("belop"))
                         .reduce(0, Integer::sum);
 
                 if (regionaleBevilgningRegnskapList.contains(args.getSkjema())) {
@@ -427,7 +229,7 @@ public class Main {
                         er.addEntry(new ErrorReportEntry(
                                 saksbehandler, "Summeringskontroller", " ", " "
                                 , "Kontroll Summeringskontroller bevilgningsregnskap, inntektsposteringene investeringsregnskapet"
-                                , "Rett opp slik at fila inneholder inntektsposteringene (" + sumInvesteringsInntekter + ") i investeringsregnskapet"
+                                , "Korrigér slik at fila inneholder inntektsposteringene (" + sumInvesteringsInntekter + ") i investeringsregnskapet"
                                 , Constants.CRITICAL_ERROR
                         ));
                     }
@@ -440,7 +242,7 @@ public class Main {
                     er.addEntry(new ErrorReportEntry(
                             saksbehandler, "Summeringskontroller", " ", " "
                             , "Kontroll Summeringskontroller investeringsregnskapet, differanse i investeringsregnskapet"
-                            , "Rett opp differansen (" + sumInvestering + ") mellom "
+                            , "Korrigér differansen (" + sumInvestering + ") mellom "
                             + "inntekter (" + sumInvesteringsInntekter + ") og "
                             + "utgifter (" + sumInvesteringsUtgifter + ") i investeringsregnskapet"
                             , Constants.CRITICAL_ERROR
@@ -450,33 +252,37 @@ public class Main {
                 // 4) Driftsregnskapet må ha utgiftsføringer, dvs. være høyere enn 0
                 int sumDriftsUtgifter = regnskap.stream()
                         .filter(p -> p.getFieldAsString("kontoklasse").equalsIgnoreCase(Definitions.getKontoklasseAsMap(args.getSkjema()).get("D"))
-                                && Between.betweenInclusive(p.getFieldAsInteger("art_sektor"), 10, 590))
-                        .map(p -> p.getFieldAsInteger("belop"))
+                                && Between.betweenInclusive(p.getFieldAsIntegerDefaultEquals0("art_sektor"), 10, 590))
+                        .map(p -> p.getFieldAsIntegerDefaultEquals0("belop"))
                         .reduce(0, Integer::sum);
 
-                if (!(0 < sumDriftsUtgifter)) {
-                    er.addEntry(new ErrorReportEntry(
-                            saksbehandler, "Summeringskontroller", " ", " "
-                            , "Kontroll Summeringskontroller bevilgningsregnskap, utgiftsposteringer driftsregnskapet"
-                            , "Rett opp slik at fila inneholder utgiftsposteringene (" + sumDriftsUtgifter + ") i driftsregnskapet"
-                            , Constants.CRITICAL_ERROR
-                    ));
+                if (Comparator.isCodeInCodelist(args.getSkjema(), List.of("0A", "0C", "0I", "0M", "0P"))) {
+                    if (!(0 < sumDriftsUtgifter)) {
+                        er.addEntry(new ErrorReportEntry(
+                                saksbehandler, "Summeringskontroller", " ", " "
+                                , "Kontroll Summeringskontroller bevilgningsregnskap, utgiftsposteringer driftsregnskapet"
+                                , "Korrigér slik at fila inneholder utgiftsposteringene (" + sumDriftsUtgifter + ") i driftsregnskapet"
+                                , Constants.CRITICAL_ERROR
+                        ));
+                    }
                 }
 
                 // 5) Driftsregnskapet må ha inntektsføringer, dvs. være mindre enn 0
                 int sumDriftsInntekter = regnskap.stream()
                         .filter(p -> p.getFieldAsString("kontoklasse").equalsIgnoreCase(Definitions.getKontoklasseAsMap(args.getSkjema()).get("D"))
-                                && Between.betweenInclusive(p.getFieldAsInteger("art_sektor"), 600, 990))
-                        .map(p -> p.getFieldAsInteger("belop"))
+                                && Between.betweenInclusive(p.getFieldAsIntegerDefaultEquals0("art_sektor"), 600, 990))
+                        .map(p -> p.getFieldAsIntegerDefaultEquals0("belop"))
                         .reduce(0, Integer::sum);
 
-                if (!(sumDriftsInntekter < 0)) {
-                    er.addEntry(new ErrorReportEntry(
-                            saksbehandler, "Summeringskontroller", " ", " "
-                            , "Kontroll Summeringskontroller bevilgningsregnskap, inntektsposteringer driftsregnskapet"
-                            , "Rett opp slik at fila inneholder inntektsposteringene (" + sumDriftsInntekter + ") i driftsregnskapet"
-                            , Constants.CRITICAL_ERROR
-                    ));
+                if (Comparator.isCodeInCodelist(args.getSkjema(), List.of("0A", "0C", "0I", "0M", "0P"))) {
+                    if (!(sumDriftsInntekter < 0)) {
+                        er.addEntry(new ErrorReportEntry(
+                                saksbehandler, "Summeringskontroller", " ", " "
+                                , "Kontroll Summeringskontroller bevilgningsregnskap, inntektsposteringer driftsregnskapet"
+                                , "Korrigér slik at fila inneholder inntektsposteringene (" + sumDriftsInntekter + ") i driftsregnskapet"
+                                , Constants.CRITICAL_ERROR
+                        ));
+                    }
                 }
 
                 // 6) Sum drift = Sum driftsutgifter + Sum driftsinntekter.. Differanser opptil +30' godtas, og skal ikke utlistes.
@@ -486,7 +292,7 @@ public class Main {
                     er.addEntry(new ErrorReportEntry(
                             saksbehandler, "Summeringskontroller", " ", " "
                             , "Kontroll Summeringskontroller bevilgningsregnskap, differanse i driftsregnskapet"
-                            , "Rett opp differansen (" + sumDrift + ") mellom "
+                            , "Korrigér differansen (" + sumDrift + ") mellom "
                             + "inntekter (" + sumDriftsInntekter + ") og "
                             + "utgifter (" + sumDriftsUtgifter + ") i driftsregnskapet"
                             , Constants.CRITICAL_ERROR
@@ -501,15 +307,15 @@ public class Main {
             // 1) Balanse må ha føring på aktiva, dvs. være høyere enn 0
             int sumAktiva = regnskap.stream()
                     .filter(p -> p.getFieldAsString("kontoklasse").equalsIgnoreCase(Definitions.getKontoklasseAsMap(args.getSkjema()).get("B"))
-                            && Between.betweenInclusive(p.getFieldAsInteger("funksjon_kapittel"), 10, 27))
-                    .map(p -> p.getFieldAsInteger("belop"))
+                            && Between.betweenInclusive(p.getFieldAsIntegerDefaultEquals0("funksjon_kapittel"), 10, 27))
+                    .map(p -> p.getFieldAsIntegerDefaultEquals0("belop"))
                     .reduce(0, Integer::sum);
 
             if (!(0 < sumAktiva)) {
                 er.addEntry(new ErrorReportEntry(
                         saksbehandler, "Summeringskontroller", " ", " "
                         , "Kontroll Summeringskontroller balanseregnskap, registrering av aktiva"
-                        , "Rett opp slik at fila inneholder registrering av aktiva (" + sumAktiva + ") i balanse."
+                        , "Korrigér slik at fila inneholder registrering av aktiva (" + sumAktiva + ") i balanse."
                         , Constants.CRITICAL_ERROR
                 ));
             }
@@ -517,15 +323,15 @@ public class Main {
             // 2) Balanse må ha føring på passiva, dvs. være mindre enn 0
             int sumPassiva = regnskap.stream()
                     .filter(p -> p.getFieldAsString("kontoklasse").equalsIgnoreCase(Definitions.getKontoklasseAsMap(args.getSkjema()).get("B"))
-                            && Between.betweenInclusive(p.getFieldAsInteger("funksjon_kapittel"), 31, 5990))
-                    .map(p -> p.getFieldAsInteger("belop"))
+                            && Between.betweenInclusive(p.getFieldAsIntegerDefaultEquals0("funksjon_kapittel"), 31, 5990))
+                    .map(p -> p.getFieldAsIntegerDefaultEquals0("belop"))
                     .reduce(0, Integer::sum);
 
             if (!(sumPassiva < 0)) {
                 er.addEntry(new ErrorReportEntry(
                         saksbehandler, "Summeringskontroller", " ", " "
                         , "Kontroll Summeringskontroller balanseregnskap, registrering av passiva"
-                        , "Rett opp slik at fila inneholder registrering av passiva (" + sumPassiva + ") i balanse."
+                        , "Korrigér slik at fila inneholder registrering av passiva (" + sumPassiva + ") i balanse."
                         , Constants.CRITICAL_ERROR
                 ));
             }
@@ -537,7 +343,7 @@ public class Main {
                 er.addEntry(new ErrorReportEntry(
                         saksbehandler, "Summeringskontroller", " ", " "
                         , "Kontroll Summeringskontroller balanseregnskap, differanse"
-                        , "Rett opp differansen (" + sumBalanse + ") mellom "
+                        , "Korrigér differansen (" + sumBalanse + ") mellom "
                         + "aktiva (" + sumAktiva + ") og "
                         + "passiva (" + sumPassiva + ") i fila (Differanser opptil ±10' godtas)"
                         , Constants.CRITICAL_ERROR
@@ -557,14 +363,14 @@ public class Main {
                         .filter(p -> p.getFieldAsString("kontoklasse").equalsIgnoreCase(Definitions.getKontoklasseAsMap(args.getSkjema()).get("D"))
                                 && p.getFieldAsTrimmedString("funksjon_kapittel").equalsIgnoreCase("800")
                                 && p.getFieldAsString("art_sektor").equalsIgnoreCase("870"))
-                        .map(p -> p.getFieldAsInteger("belop"))
+                        .map(p -> p.getFieldAsIntegerDefaultEquals0("belop"))
                         .reduce(0, Integer::sum);
 
                 if (!(sumSkatteInntekter < 0)) {
                     er.addEntry(new ErrorReportEntry(
                             saksbehandler, "Summeringskontroller", " ", " "
                             , "Kontroll Skatteinntekter og rammetilskudd, skatteinntekter"
-                            , "Rett opp slik at fila inneholder skatteinntekter (" + sumSkatteInntekter + ")."
+                            , "Korrigér slik at fila inneholder skatteinntekter (" + sumSkatteInntekter + ")."
                             , Constants.CRITICAL_ERROR
                     ));
                 }
@@ -572,34 +378,35 @@ public class Main {
                 // 2) Skatteinntekter skal føres på funksjon 800. Ingen andre funksjoner skal være gyldig i kombinasjon med art 870.
                 int sumSkatteInntekterAndreFunksjoner = regnskap.stream()
                         .filter(p -> p.getFieldAsString("kontoklasse").equalsIgnoreCase(Definitions.getKontoklasseAsMap(args.getSkjema()).get("D"))
-                                && p.getFieldAsString("art_sektor").equalsIgnoreCase("870")
-                                && !p.getFieldAsTrimmedString("funksjon_kapittel").equalsIgnoreCase("800"))
-                        .map(p -> p.getFieldAsInteger("belop"))
+                                && !p.getFieldAsTrimmedString("funksjon_kapittel").equalsIgnoreCase("800")
+                                && p.getFieldAsString("art_sektor").equalsIgnoreCase("870"))
+                        .map(p -> p.getFieldAsIntegerDefaultEquals0("belop"))
                         .reduce(0, Integer::sum);
 
                 if (!(sumSkatteInntekterAndreFunksjoner == 0)) {
                     er.addEntry(new ErrorReportEntry(
                             saksbehandler, "Summeringskontroller", " ", " "
                             , "Kontroll Skatteinntekter og rammetilskudd, funksjon 800, art 870"
-                            , "Rett opp slik at skatteinntekter er ført på funksjon 800, art 870. "
+                            , "Korrigér slik at skatteinntekter kun er ført på funksjon 800, art 870. "
                             + "Sum skatteinntekter fra andre funksjoner/art870 er (" + sumSkatteInntekterAndreFunksjoner + ")"
                             , Constants.CRITICAL_ERROR
                     ));
                 }
 
                 // 3) Rammetilskudd skal føres på funksjon 840. Ingen andre funksjoner skal være gyldig i kombinasjon med art 800.
-                int funksjon800art840Andre = regnskap.stream()
+                int sumRammetilskuddAndreFunksjoner = regnskap.stream()
                         .filter(p -> p.getFieldAsString("kontoklasse").equalsIgnoreCase(Definitions.getKontoklasseAsMap(args.getSkjema()).get("D"))
-                                && p.getFieldAsString("art_sektor").equalsIgnoreCase("800")
-                                && !p.getFieldAsTrimmedString("funksjon_kapittel").equalsIgnoreCase("840"))
-                        .map(p -> p.getFieldAsInteger("belop"))
+                                && !p.getFieldAsTrimmedString("funksjon_kapittel").equalsIgnoreCase("840")
+                                && p.getFieldAsString("art_sektor").equalsIgnoreCase("800"))
+                        .map(p -> p.getFieldAsIntegerDefaultEquals0("belop"))
                         .reduce(0, Integer::sum);
 
-                if (!(funksjon800art840Andre == 0)) {
+                if (!(sumRammetilskuddAndreFunksjoner == 0)) {
                     er.addEntry(new ErrorReportEntry(
                             saksbehandler, "Summeringskontroller", " ", " "
                             , "Kontroll Skatteinntekter og rammetilskudd, art 800"
-                            , "Rett opp slik at art 800 ikke benyttes på andre funksjoner enn 840."
+                            , "Korrigér slik at rammetilskudd kun er ført på funksjon 840, art 800. "
+                            + "Sum rammetilskudd fra andre funksjoner/art800 er (" + sumRammetilskuddAndreFunksjoner + ")"
                             , Constants.CRITICAL_ERROR
                     ));
                 }
@@ -615,13 +422,13 @@ public class Main {
                 int driftsoverforinger = regnskap.stream()
                         .filter(p -> p.getFieldAsString("kontoklasse").equalsIgnoreCase(Definitions.getKontoklasseAsMap(args.getSkjema()).get("D"))
                                 && p.getFieldAsString("art_sektor").equalsIgnoreCase("570"))
-                        .map(p -> p.getFieldAsInteger("belop"))
+                        .map(p -> p.getFieldAsIntegerDefaultEquals0("belop"))
                         .reduce(0, Integer::sum);
 
                 int investeringsoverforinger = regnskap.stream()
                         .filter(p -> p.getFieldAsString("kontoklasse").equalsIgnoreCase(Definitions.getKontoklasseAsMap(args.getSkjema()).get("I"))
                                 && p.getFieldAsString("art_sektor").equalsIgnoreCase("970"))
-                        .map(p -> p.getFieldAsInteger("belop"))
+                        .map(p -> p.getFieldAsIntegerDefaultEquals0("belop"))
                         .reduce(0, Integer::sum);
 
                 int differanse = driftsoverforinger + investeringsoverforinger;
@@ -630,7 +437,9 @@ public class Main {
                     er.addEntry(new ErrorReportEntry(
                             saksbehandler, "Summeringskontroller", " ", " "
                             , "Kontroll Overføring mellom drifts- og investeringsregnskap"
-                            , "Rett opp i fila slik at overføringer mellom drifts- (" + driftsoverforinger + ") og investeringsregnskapet (" + investeringsoverforinger + ") stemmer overens"
+                            , "Korrigér i fila slik at differansen (" + differanse
+                            + ") i overføringer mellom drifts- (" + driftsoverforinger
+                            + ") og investeringsregnskapet (" + investeringsoverforinger + ") stemmer overens."
                             , Constants.CRITICAL_ERROR
                     ));
                 }
@@ -642,81 +451,88 @@ public class Main {
         //D = Driftsregnskap (kontoklasse 1 / 3)
         //I = Investeringsregnskap (kontoklasse 0 / 4)
         List<String> exceptionsOrgnr = List.of(
-        "958935420" // 0301 Oslo
-        , "939214895" // 3005 Drammen
-        , "964338531" // 4601 Bergen
-        , "817920632" // 5000 Sør-Trøndelag
+                "958935420" // 0301 Oslo
+                , "939214895" // 3005 Drammen
+                , "964338531" // 4601 Bergen
+                , "817920632" // 5000 Sør-Trøndelag
         );
         if (bevilgningRegnskapList.contains(args.getSkjema())) {
             if (!osloBydeler.contains(args.getRegion()) && !exceptionsOrgnr.contains(args.getOrgnr())) {
-                // 1) Funksjon D.860, art 990 ≠ 0
-                int funksjon860art990 = regnskap.stream()
+                int motpostAvskrivninger = regnskap.stream()
                         .filter(p -> p.getFieldAsString("kontoklasse").equalsIgnoreCase(Definitions.getKontoklasseAsMap(args.getSkjema()).get("D"))
                                 && p.getFieldAsTrimmedString("funksjon_kapittel").equalsIgnoreCase("860")
                                 && p.getFieldAsString("art_sektor").equalsIgnoreCase("990")
                         )
-                        .map(p -> p.getFieldAsInteger("belop"))
+                        .map(p -> p.getFieldAsIntegerDefaultEquals0("belop"))
                         .reduce(0, Integer::sum);
 
-                if (funksjon860art990 == 0) {
+                if (motpostAvskrivninger == 0) {
                     er.addEntry(new ErrorReportEntry(
                             saksbehandler, "Summeringskontroller", " ", " "
-                            , "Kontroll Avskrivninger, funksjon 860, art 990"
-                            , "Rett opp i fila slik at motpost avskrivninger (" + funksjon860art990 + ") er ført på funksjon 860, art 990."
+                            , "Kontroll Avskrivninger, motpost avskrivninger"
+                            , "Korrigér i fila slik at den inneholder motpost avskrivninger (" + motpostAvskrivninger + "), føres på funksjon 860 og art 990."
                             , Constants.CRITICAL_ERROR
                     ));
                 }
 
-                // 2) Art 590 for sum funksjoner D.100-D.899 + art 990 for funksjon D.860 = < 30 og > - 30. Differanser opptil +-30' godtas, og skal ikke utlistes.
-                int sumArt590 = regnskap.stream()
+                int avskrivninger = regnskap.stream()
                         .filter(p -> p.getFieldAsString("kontoklasse").equalsIgnoreCase(Definitions.getKontoklasseAsMap(args.getSkjema()).get("D"))
+                                && Between.betweenInclusive(p.getFieldAsIntegerDefaultEquals0("funksjon_kapittel"), 100, 799)
                                 && p.getFieldAsString("art_sektor").equalsIgnoreCase("590"))
-                        .map(p -> p.getFieldAsInteger("belop"))
+                        .map(p -> p.getFieldAsIntegerDefaultEquals0("belop"))
                         .reduce(0, Integer::sum);
 
-                int differanse = funksjon860art990 + sumArt590;
+                if (avskrivninger == 0) {
+                    er.addEntry(new ErrorReportEntry(
+                            saksbehandler, "Summeringskontroller", " ", " "
+                            , "Kontroll Avskrivninger, avskrivninger"
+                            , "Korrigér i fila slik at den inneholder avskrivninger (" + avskrivninger + "), føres på tjenestefunksjon og art 590."
+                            , Constants.NORMAL_ERROR
+                    ));
+                }
+
+                int differanse = motpostAvskrivninger + avskrivninger;
 
                 if (!Between.betweenInclusive(differanse, -30, 30)) {
                     er.addEntry(new ErrorReportEntry(
                             saksbehandler, "Summeringskontroller", " ", " "
-                            , "Kontroll Avskrivninger, art 590, art 990"
-                            , "Rett opp i fila slik at art 590 (" + sumArt590 + ") stemmer overens med art 990 (" + funksjon860art990 + ") (margin på +/- 30')"
+                            , "Kontroll Avskrivninger, differanse"
+                            , "Korrigér i fila slik at avskrivninger (" + avskrivninger + ") stemmer overens med motpost avskrivninger (" + motpostAvskrivninger + ") (margin på +/- 30')"
                             , Constants.CRITICAL_ERROR
                     ));
                 }
 
-                // 3) Funksjon D.800..D.899, art 590 = 0
-                int sumFunksjon8XXArt590 = regnskap.stream()
+                int avskrivningerAndreFunksjoner = regnskap.stream()
                         .filter(p -> p.getFieldAsString("kontoklasse").equalsIgnoreCase(Definitions.getKontoklasseAsMap(args.getSkjema()).get("D"))
+                                && Between.betweenInclusive(p.getFieldAsIntegerDefaultEquals0("funksjon_kapittel"), 800, 899)
                                 && p.getFieldAsString("art_sektor").equalsIgnoreCase("590")
-                                && Between.betweenInclusive(p.getFieldAsInteger("funksjon_kapittel"), 800, 899)
                         )
-                        .map(p -> p.getFieldAsInteger("belop"))
+                        .map(p -> p.getFieldAsIntegerDefaultEquals0("belop"))
                         .reduce(0, Integer::sum);
 
-                if (!(sumFunksjon8XXArt590 == 0)) {
+                if (!(avskrivningerAndreFunksjoner == 0)) {
                     er.addEntry(new ErrorReportEntry(
                             saksbehandler, "Summeringskontroller", " ", " "
-                            , "Kontroll Avskrivninger, avskrivningskostnadene"
-                            , "Rett opp i fila slik at avskrivningskostnadene (" + sumFunksjon8XXArt590 + ") er ført på tjenestefunksjon"
+                            , "Kontroll Avskrivninger, avskrivninger ført på andre funksjoner"
+                            , "Korrigér i fila slik at avskrivningene føres på tjenestefunksjon. Avskrivninger fra andre funksjoner/art590 er (" + avskrivningerAndreFunksjoner + ")"
                             , Constants.CRITICAL_ERROR
                     ));
                 }
 
-                // 4) Sum funksjoner (D.100..D.850)+(D.870..D.899), art 990 = 0
-                int motpostAvskrivninger = regnskap.stream()
+                int motpostAvskrivningerAndreFunksjoner = regnskap.stream()
                         .filter(p -> p.getFieldAsString("kontoklasse").equalsIgnoreCase(Definitions.getKontoklasseAsMap(args.getSkjema()).get("D"))
-                                && p.getFieldAsString("art_sektor").equalsIgnoreCase("990")
                                 && !p.getFieldAsTrimmedString("funksjon_kapittel").equalsIgnoreCase("860")
+                                && p.getFieldAsString("art_sektor").equalsIgnoreCase("990")
                         )
-                        .map(p -> p.getFieldAsInteger("belop"))
+                        .map(p -> p.getFieldAsIntegerDefaultEquals0("belop"))
                         .reduce(0, Integer::sum);
 
-                if (!(motpostAvskrivninger == 0)) {
+                if (!(motpostAvskrivningerAndreFunksjoner == 0)) {
                     er.addEntry(new ErrorReportEntry(
                             saksbehandler, "Summeringskontroller", " ", " "
-                            , "Kontroll Avskrivninger, motpost"
-                            , "Rett opp i fila slik at motpost avskrivninger (" + motpostAvskrivninger + ") er ført på funksjon 860, art 990."
+                            , "Kontroll Avskrivninger, motpost avskrivninger ført på andre funksjoner"
+                            , "Korrigér i fila slik at motpost avskrivninger kun er ført på funksjon 860, art 990."
+                            + "Sum motpost avskrivninger fra andre funksjoner/art 990 er (" + motpostAvskrivningerAndreFunksjoner + ")"
                             , Constants.CRITICAL_ERROR
                     ));
                 }
@@ -733,14 +549,14 @@ public class Main {
                 int funksjon290Investering = regnskap.stream()
                         .filter(p -> p.getFieldAsString("kontoklasse").equalsIgnoreCase(Definitions.getKontoklasseAsMap(args.getSkjema()).get("I"))
                                 && p.getFieldAsTrimmedString("funksjon_kapittel").equalsIgnoreCase("290"))
-                        .map(p -> p.getFieldAsInteger("belop"))
+                        .map(p -> p.getFieldAsIntegerDefaultEquals0("belop"))
                         .reduce(0, Integer::sum);
 
                 if (!(Between.betweenInclusive(funksjon290Investering, -30, 30))) {
                     er.addEntry(new ErrorReportEntry(
                             saksbehandler, "Summeringskontroller", " ", " "
                             , "Kontroll Funksjon 290, investeringsregnskapet"
-                            , "Rett opp i fila slik at funksjon 290 (" + funksjon290Investering + ") går i 0 i investeringsregnskapet."
+                            , "Korrigér i fila slik at differanse (" + funksjon290Investering + ") på funksjon 290 interkommunale samarbeid (§27-samarbeid) går i 0 i investeringsregnskapet . (margin på +/- 30')"
                             , Constants.CRITICAL_ERROR
                     ));
                 }
@@ -749,14 +565,14 @@ public class Main {
                 int funksjon290Drift = regnskap.stream()
                         .filter(p -> p.getFieldAsString("kontoklasse").equalsIgnoreCase(Definitions.getKontoklasseAsMap(args.getSkjema()).get("D"))
                                 && p.getFieldAsTrimmedString("funksjon_kapittel").equalsIgnoreCase("290"))
-                        .map(p -> p.getFieldAsInteger("belop"))
+                        .map(p -> p.getFieldAsIntegerDefaultEquals0("belop"))
                         .reduce(0, Integer::sum);
 
                 if (!(Between.betweenInclusive(funksjon290Drift, -30, 30))) {
                     er.addEntry(new ErrorReportEntry(
                             saksbehandler, "Summeringskontroller", " ", " "
                             , "Kontroll Funksjon 290, driftsregnskapet"
-                            , "Rett opp i fila slik at funksjon 290 (" + funksjon290Drift + ") går i 0 i driftsregnskapet."
+                            , "Korrigér i fila slik at differanse (" + funksjon290Drift + ") på funksjon 290 interkommunale samarbeid (§27-samarbeid) går i 0 i driftsregnskapet . (margin på +/- 30')"
                             , Constants.CRITICAL_ERROR
                     ));
                 }
@@ -771,14 +587,15 @@ public class Main {
             int funksjon465Investering = regnskap.stream()
                     .filter(p -> p.getFieldAsString("kontoklasse").equalsIgnoreCase(Definitions.getKontoklasseAsMap(args.getSkjema()).get("I"))
                             && p.getFieldAsTrimmedString("funksjon_kapittel").equalsIgnoreCase("465"))
-                    .map(p -> p.getFieldAsInteger("belop"))
+                    .map(p -> p.getFieldAsIntegerDefaultEquals0("belop"))
                     .reduce(0, Integer::sum);
 
             if (!(Between.betweenInclusive(funksjon465Investering, -30, 30))) {
                 er.addEntry(new ErrorReportEntry(
                         saksbehandler, "Summeringskontroller", " ", " "
                         , "Kontroll Funksjon 465, investeringsregnskapet"
-                        , "Rett opp i fila slik at funksjon 465 (" + funksjon465Investering + ") går i 0 i investeringsregnskapet."
+                        , "Korrigér i fila slik at differanse (" + funksjon465Investering + ") på "
+                        + "funksjon 465 Interfylkeskommunale samarbeid (§§ 27/28a-samarbeid) går i 0 i investeringsregnskapet . (margin på +/- 30')"
                         , Constants.CRITICAL_ERROR
                 ));
             }
@@ -787,14 +604,15 @@ public class Main {
             int funksjon465Drift = regnskap.stream()
                     .filter(p -> p.getFieldAsString("kontoklasse").equalsIgnoreCase(Definitions.getKontoklasseAsMap(args.getSkjema()).get("D"))
                             && p.getFieldAsTrimmedString("funksjon_kapittel").equalsIgnoreCase("465"))
-                    .map(p -> p.getFieldAsInteger("belop"))
+                    .map(p -> p.getFieldAsIntegerDefaultEquals0("belop"))
                     .reduce(0, Integer::sum);
 
             if (!(Between.betweenInclusive(funksjon465Drift, -30, 30))) {
                 er.addEntry(new ErrorReportEntry(
                         saksbehandler, "Summeringskontroller", " ", " "
                         , "Kontroll Funksjon 465, driftsregnskapet"
-                        , "Rett opp i fila slik at funksjon 465 (" + funksjon465Drift + ") går i 0 i driftsregnskapet."
+                        , "Korrigér i fila slik at differanse (" + funksjon465Drift + ") på "
+                        + "funksjon 465 Interfylkeskommunale samarbeid (§§ 27/28a-samarbeid) går i 0 i driftsregnskapet . (margin på +/- 30')"
                         , Constants.CRITICAL_ERROR
                 ));
             }
@@ -807,14 +625,14 @@ public class Main {
                     .filter(p -> p.getFieldAsString("kontoklasse").equalsIgnoreCase(Definitions.getKontoklasseAsMap(args.getSkjema()).get("B"))
                             && List.of("9100", "9110", "9200").contains(p.getFieldAsTrimmedString("funksjon_kapittel"))
                     )
-                    .map(p -> p.getFieldAsInteger("belop"))
+                    .map(p -> p.getFieldAsIntegerDefaultEquals0("belop"))
                     .reduce(0, Integer::sum);
 
             int sumMotkontoMemoriaKonti = regnskap.stream()
                     .filter(p -> p.getFieldAsString("kontoklasse").equalsIgnoreCase(Definitions.getKontoklasseAsMap(args.getSkjema()).get("B"))
-                            && List.of("9999").contains(p.getFieldAsTrimmedString("funksjon_kapittel"))
+                            && Objects.equals("9999", p.getFieldAsTrimmedString("funksjon_kapittel"))
                     )
-                    .map(p -> p.getFieldAsInteger("belop"))
+                    .map(p -> p.getFieldAsIntegerDefaultEquals0("belop"))
                     .reduce(0, Integer::sum);
 
             int differanse = sumMemoriaKonti + sumMotkontoMemoriaKonti;
@@ -823,9 +641,9 @@ public class Main {
                 er.addEntry(new ErrorReportEntry(
                         saksbehandler, "Summeringskontroller", " ", " "
                         , "Kontroll Memoriakonti"
-                        , "Rett opp i fila slik at differansen (" + differanse + ") mellom "
+                        , "Korrigér i fila slik at differansen (" + differanse + ") mellom "
                         + "memoriakontiene (" + sumMemoriaKonti + ") og "
-                        + "motkonto for memoriakontiene (" + sumMotkontoMemoriaKonti + ") går i 0"
+                        + "motkonto for memoriakontiene (" + sumMotkontoMemoriaKonti + ") går i 0. (margin på +/- 10')"
                         , Constants.CRITICAL_ERROR
                 ));
             }
